[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hrefs"
authors = [{name = "Jaakko Moisio", email = "jaakko@moisio.fi"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {file = "LICENSE"}
readme = "README.rst"
dynamic = ["version", "description"]
dependencies = [
  "pydantic>=1.8",
  "starlette",
  "typing_extensions",
]
requires-python=">=3.7"

[project.optional-dependencies]
test = [
  "tox>=3.24",
  "pytest>=7.2",
  "hypothesis>=6.68",
  "fastapi>=0.92",
  "black>=23.1",
  "pylint>=2.16",
  "mypy>=1.0",
  "httpx>=0.23",
]

doc = [
  "sphinx",
  "sphinx-rtd-theme",
]

[project.urls]
Source = "https://github.com/jasujm/hrefs"
Documentation = "https://hrefs.readthedocs.io/"

[project.entry-points.hypothesis]
_ = "hrefs._hypothesis_plugin:_hypothesis_setup_hook"

[tool.mypy]
ignore_missing_imports = true
