[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hrefs"
authors = [{name = "Jaakko Moisio", email = "jaakko@moisio.fi"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 1",
  "Framework :: Hypothesis",
  "Framework :: Pytest",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {file = "LICENSE"}
readme = "README.rst"
dynamic = ["version", "description"]
dependencies = [
  "pydantic>=1.8",
  "starlette",
  "typing_extensions",
]
requires-python=">=3.7"

[project.optional-dependencies]
test = [
  "tox>=4.11",
  "pytest>=7.4",
  "hypothesis>=6.82",
  "fastapi>=0.103",
  "black>=23.7",
  "pylint>=2.17",
  "mypy>=1.5",
  "httpx>=0.24",
  "pytest-skip-slow",
  "coverage>=7.3",
]

doc = [
  "sphinx<7",
  "sphinx-rtd-theme<1.3",
]

[project.urls]
Source = "https://github.com/jasujm/hrefs"
Documentation = "https://hrefs.readthedocs.io/"

[project.entry-points.hypothesis]
_ = "hrefs._hypothesis_plugin:_hypothesis_setup_hook"

[tool.mypy]
ignore_missing_imports = true
