[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hrefs"
authors = [{name = "Jaakko Moisio", email = "jaakko@moisio.fi"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 1",
  "Framework :: Pydantic :: 2",
  "Framework :: Hypothesis",
  "Framework :: Pytest",
  "Framework :: tox",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {file = "LICENSE"}
readme = "README.rst"
dynamic = ["version", "description"]
dependencies = [
  "pydantic>=1.8",
  "starlette",
]
requires-python=">=3.9"

[project.optional-dependencies]
test = [
  "tox>=4.24",
  "pytest>=8.3",
  "hypothesis>=6.125",
  "fastapi>=0.115",
  "black>=25.1",
  "pylint>=3.3",
  "mypy>=1.15",
  "httpx>=0.28",
  "pytest-skip-slow",
  "coverage>=7.6",
]

doc = [
  "sphinx>=8.1; python_version>=\"3.11\"",
  "sphinx-rtd-theme>=3.0; python_version>=\"3.11\"",
]

[project.urls]
Source = "https://github.com/jasujm/hrefs"
Documentation = "https://hrefs.readthedocs.io/"

[project.entry-points.hypothesis]
_ = "hrefs._hypothesis_plugin:_hypothesis_setup_hook"

[tool.mypy]
ignore_missing_imports = true
